fit_predictor/tsp_gls/evaluates/total/coevolve/test1/run3/2024-12-31_14-42-26/problem_iter2_response25.txt_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main_1/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics_v2 as heuristics
  File "E:\Projects\CO\reevo-main_1\problems\tsp_gls\gpt.py", line 15
    [distance_matrix[j, np.argmin(distance_matrix[j])]])
                                                       ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 14

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main_1/problems/tsp_gls/eval.py", line 12, in <module>
    from gpt import heuristics
  File "E:\Projects\CO\reevo-main_1\problems\tsp_gls\gpt.py", line 15
    [distance_matrix[j, np.argmin(distance_matrix[j])]])
                                                       ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 14
